@@ -4,34 +4,39 @@
 
 package frc.robot.subsystems;
 
+import com.ctre.phoenix.motorcontrol.InvertType;
+import com.ctre.phoenix.motorcontrol.NeutralMode;
 import com.ctre.phoenix.motorcontrol.TalonFXControlMode;
 import com.ctre.phoenix.motorcontrol.can.TalonFX;
+import edu.wpi.first.networktables.NetworkTableInstance;
 import edu.wpi.first.wpilibj.DigitalInput;
 import edu.wpi.first.wpilibj.DriverStation;
 import edu.wpi.first.wpilibj2.command.InstantCommand;
-import edu.wpi.first.wpilibj2.command.ParallelCommandGroup;
 import edu.wpi.first.wpilibj2.command.SubsystemBase;
 import edu.wpi.first.wpilibj2.command.button.Trigger;
 import frc.robot.hardware.MuxedColorSensor;
+import frc.robot.hardware.TalonConfiguration;
 import frc.robot.hardware.TalonFXFactory;
 import frc.robot.commands.transfer.TransferIndexForward;
 import frc.robot.commands.transfer.TransferOff;
 
 import edu.wpi.first.wpilibj.smartdashboard.SmartDashboard;
 import frc.robot.helper.BallColor;
+import frc.robot.helper.logging.RobotLogger;
 
 import java.util.LinkedList;
-import java.util.logging.Logger;
 
 import static frc.robot.Constants.IDConstants.MANI_CAN_BUS;
 import static frc.robot.Constants.LEDConstants.BALL_PATTERN;
 import static frc.robot.Constants.IDConstants;
 
+import static frc.robot.Constants.SubsystemEnableFlags.BALL_COLOR_SENSOR;
+import static frc.robot.Constants.SubsystemEnableFlags.IR_SENSORS;
 import static frc.robot.Constants.TransferConstants;
 import static frc.robot.Constants.TransferConstants.*;
 
 public class TransferSubsystem extends SubsystemBase {
-    private static final Logger logger = Logger.getLogger(TransferSubsystem.class.getCanonicalName());
+    private static final RobotLogger logger = new RobotLogger(TransferSubsystem.class.getCanonicalName());
 
     private final TalonFX transferMotor;
     private final DigitalInput transferStartIRSensor;
@@ -51,11 +56,19 @@ public class TransferSubsystem extends SubsystemBase {
     // Linked list for FIFO queue
     LinkedList<BallColor> ballColorIndex = new LinkedList<>();
 
+    // For Tracking Ball RPM
+    public static ShooterSubsystem flywheelSubsystem;
+
 
     private double currentBallCount;
 
     public TransferSubsystem() {
-        transferMotor = TalonFXFactory.createTalonFX(IDConstants.TRANSFER_MOTOR_ID, MANI_CAN_BUS);
+        TalonConfiguration talonConfiguration = new TalonConfiguration(
+                new TalonConfiguration.TalonFXPIDFConfig(),
+                InvertType.InvertMotorOutput,
+                NeutralMode.Brake);
+
+        transferMotor = TalonFXFactory.createTalonFX(IDConstants.TRANSFER_MOTOR_ID, talonConfiguration, MANI_CAN_BUS);
       
         transferStartIRSensor = new DigitalInput(IDConstants.IR_TRANSFER_BEGINNING_CHANNEL);
         transferStopIRSensor = new DigitalInput(IDConstants.IR_TRANSFER_MIDDLE_CHANNEL);
@@ -74,7 +87,7 @@ public class TransferSubsystem extends SubsystemBase {
 
         transferIndexSetup();
         logger.info("Transfer Initialized");
-        logger.config("Starting Ball Count Initialized to: " + currentBallCount);
+        logger.info("Starting Ball Count Initialized to: " + currentBallCount);
     }
 
     public void forward(){
@@ -82,6 +95,17 @@ public class TransferSubsystem extends SubsystemBase {
         transferMotor.set(TalonFXControlMode.PercentOutput, TransferConstants.DEFAULT_TRANSFER_SPEED);
         logger.info("Transfer On");
     }
+
+    public void forwardShoot(){
+        isReversed = false;
+        transferMotor.set(TalonFXControlMode.PercentOutput, TransferConstants.SHOOT_FORWARD_TRANSFER_SPEED);
+        logger.info("Transfer Shooting Mode On");
+    }
+
+    public double getCurrentBallCount(){
+        return currentBallCount;
+    }
+
 
     public void manualReverse(){
         isReversed = true;
@@ -99,7 +123,7 @@ public class TransferSubsystem extends SubsystemBase {
      * @return Returns whether the IR sensor at the front of the transfer's line of sight is broken.
      */
     public boolean isTransferStartIRBroken() {
-        return transferStartIRSensor.get();
+        return !transferStartIRSensor.get();
     }
 
     /**
@@ -107,7 +131,7 @@ public class TransferSubsystem extends SubsystemBase {
      * which signifies when the ball should stop.
      */
     public boolean isTransferStopIRBroken() {
-        return transferStopIRSensor.get();
+        return !transferStopIRSensor.get();
     }
 
     /**
@@ -115,7 +139,7 @@ public class TransferSubsystem extends SubsystemBase {
      * which signifies when the ball leaves the transfer via the shooter
      */
     public boolean isTransferEndIRBroken() {
-        return transferEndIRSensor.get();
+        return !transferEndIRSensor.get();
     }
 
     public boolean isFull(){
@@ -124,19 +148,18 @@ public class TransferSubsystem extends SubsystemBase {
 
     public void transferIndexSetup(){
 
+        // If no IR Sensors, Disable all Sensors
+        if (!IR_SENSORS)
+            return;
+
         // Starts Index / Counting Process when First Detecting Ball
         new Trigger(this::isTransferStartIRBroken).and(new Trigger(()->!isReversed))
-                .whenActive(new ParallelCommandGroup(
-                        new InstantCommand(this::ballIndexStart),
-                        new TransferIndexForward(this)
-                ));
+                .whenActive(new TransferIndexForward(this))
+                .whenInactive(new TransferOff(this));
 
-
-        // Stop Running Transfer when past end mark, also evaluates color
-        new Trigger(this::isTransferStopIRBroken).and(new Trigger(()->!isReversed))
-                .whenInactive(new ParallelCommandGroup(
-                    new InstantCommand(this::ballIndexEnd),
-                    new TransferOff(this)));
+       /* new Trigger(this::isTransferStartIRBroken).and(new Trigger(() -> this.currentBallCount == 1))
+                .whenInactive(new TransferOff(this)
+                        );*/
 
         // Subtract Balls shot out of shooter
         new Trigger(this::isTransferEndIRBroken).and(new Trigger(()->!isReversed))
@@ -148,10 +171,11 @@ public class TransferSubsystem extends SubsystemBase {
     }
 
     private void ballIndexStart(){
+
+        forward();
+        logger.info("Ball Count Start: "+currentBallCount);
         redColorCountVote = 0;
         blueColorCountVote = 0;
-
-        currentBallCount++;
 
         if(isFull()){
             logger.info("Indexing while Transfer is full!");
@@ -174,57 +198,75 @@ public class TransferSubsystem extends SubsystemBase {
     }
 
     private void ballIndexEnd(){
+        off();
         isDetectingBallColor = false;
 
-        if (redColorCountVote == 0 && blueColorCountVote == 0)
-            logger.warning("No Ball Detected in Index!");
+        currentBallCount++;
 
-        else if (redColorCountVote == blueColorCountVote)
-            logger.warning("Blue and Red Ball Counts are the same!\nCount: " + redColorCountVote);
+        if (BALL_COLOR_SENSOR) {
+            if (redColorCountVote == 0 && blueColorCountVote == 0)
+                logger.warning("No Ball Detected in Index!");
 
-        else if (redColorCountVote > blueColorCountVote) {
-            addBallToIndex(BallColor.RED);
+            else if (redColorCountVote == blueColorCountVote)
+                logger.warning("Blue and Red Ball Counts are the same!\nCount: " + redColorCountVote);
+
+            else if (redColorCountVote > blueColorCountVote) {
+                addBallToIndex(BallColor.RED);
+            } else {
+                addBallToIndex(BallColor.BLUE);
+            }
         }
-        else {
-           addBallToIndex(BallColor.BLUE);
-        }
+
+        logger.info("Ball Count End: "+currentBallCount);
     }
 
     private void addBallToIndex(BallColor ballColor){
         logger.info("Ball Indexed Into Transfer");
 
-        if (ballColor == BallColor.RED && alliance == DriverStation.Alliance.Blue)
-            wrongBallColorDetected(ballColor);
+        if (BALL_COLOR_SENSOR) {
+            if (ballColor == BallColor.RED && alliance == DriverStation.Alliance.Blue)
+                wrongBallColorDetected(ballColor);
 
-        if (ballColor == BallColor.BLUE && alliance == DriverStation.Alliance.Red)
-            wrongBallColorDetected(ballColor);
+            if (ballColor == BallColor.BLUE && alliance == DriverStation.Alliance.Red)
+                wrongBallColorDetected(ballColor);
 
-        // Keep 2nd Ball in 2nd Place, if there is one
-        if (ballColorIndex.get(0) == BallColor.NONE){
-            ballColorIndex.set(0, ballColor);
-        } else {
-            ballColorIndex.addFirst(ballColor);
+
+            // Keep 2nd Ball in 2nd Place, if there is one
+            if (!ballColorIndex.isEmpty() && ballColorIndex.get(0) == BallColor.NONE) {
+                ballColorIndex.set(0, ballColor);
+            } else {
+                ballColorIndex.addFirst(ballColor);
+            }
+
+            // Remove extra NONEs
+            if (ballColorIndex.getLast() == BallColor.NONE)
+                ballColorIndex.removeLast();
+
+            updateBallLEDPattern();
         }
-
-        // Remove extra NONEs
-        if (ballColorIndex.getLast() == BallColor.NONE)
-            ballColorIndex.removeLast();
-
-        updateBallLEDPattern();
     }
 
     private void removeShotBallFromIndex(){
         logger.info("Ball Leaving Transfer by Shooting");
 
+        if (flywheelSubsystem != null)
+            logger.info("Ball Leaving At RPM: " + flywheelSubsystem.getFlywheelRPM() + " rpm");
+
         currentBallCount--;
-
-        if (ballColorIndex.getLast() == BallColor.NONE)
+        if (currentBallCount < 0) {
+            currentBallCount = 0;
             logger.warning("No Ball At end of index!");
+        }
 
-        ballColorIndex.removeLast();
-        ballColorIndex.addFirst(BallColor.NONE);
+        if (BALL_COLOR_SENSOR) {
+            if (ballColorIndex.getLast() == BallColor.NONE)
+                logger.warning("No Ball Color At end of index!");
 
-        updateBallLEDPattern();
+            ballColorIndex.removeLast();
+            ballColorIndex.addFirst(BallColor.NONE);
+
+            updateBallLEDPattern();
+        }
     }
 
     private void removeBallEjectedOutOfIntake(){
@@ -232,12 +274,14 @@ public class TransferSubsystem extends SubsystemBase {
 
         currentBallCount--;
 
-        if (ballColorIndex.get(0) == BallColor.NONE){
-            // Only Ball is Indexed 2nd, Removes the NONE and the Ball
-            ballColorIndex.remove(0);
-            ballColorIndex.remove(1);
-        } else {
-            ballColorIndex.removeFirst();
+        if (BALL_COLOR_SENSOR) {
+            if (ballColorIndex.get(0) == BallColor.NONE) {
+                // Only Ball is Indexed 2nd, Removes the NONE and the Ball
+                ballColorIndex.remove(0);
+                ballColorIndex.remove(1);
+            } else {
+                ballColorIndex.removeFirst();
+            }
         }
     }
 
@@ -259,5 +303,9 @@ public class TransferSubsystem extends SubsystemBase {
     public void periodic() {
         if (isDetectingBallColor)
             ballColorSamplingPeriodic();
+        NetworkTableInstance.getDefault().getTable("Debug").getEntry("Forward IR").setBoolean( this.isTransferStartIRBroken());
+
+        NetworkTableInstance.getDefault().getTable("Debug").getEntry("END IR").setBoolean( this.isTransferEndIRBroken());
+
     }
 }
